--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "typeRoots": [
       "./node_modules/@types"
     ],
-    "types": ["node"]
+    "types": []
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
