Provide a user interface to view stored data in table view

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ API_URL=https://jsonplaceholder.typicode.com
 
 # Output CSV file path (relative or absolute)
 CSV_OUTPUT_PATH=output/users.csv
+
+# Path to the user data CSV file (relative or absolute)
+USER_CSV_PATH=./data/users.csv
