--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
+    "csv-parse": "^6.1.0",
     "dotenv": "^16.3.1",
     "path": "^0.12.7"
   },
