Provide a user interface to view stored data in table view

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 API_URL=https://jsonplaceholder.typicode.com
 CSV_OUTPUT_PATH=output/users.csv
 USER_CSV_PATH=./data/users.csv
+PORT=3001
+LOG_LEVEL=info
