--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ CSV_OUTPUT_PATH=output/users.csv
 
 # Path to the user data CSV file (relative or absolute)
 USER_CSV_PATH=./data/users.csv
+
+# Backend server port (optional, default: 3001)
+PORT=3001
+
+# Logging level (info, warn, error)
+LOG_LEVEL=info
