Implement backend retrieval of user data for UI display

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ PORT=3001
 
 # Logging level (info, warn, error)
 LOG_LEVEL=info
+
+# Users API endpoint for population script
+USERS_API_URL=https://jsonplaceholder.typicode.com/users
+
+# Path to backend user storage (JSON file)
+USERS_STORAGE_PATH=./data/users.json
