--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ CSV_OUTPUT_PATH=output/users.csv
 USER_CSV_PATH=./data/users.csv
 PORT=3001
 LOG_LEVEL=info
+
+# Users API endpoint for population script
+USERS_API_URL=https://jsonplaceholder.typicode.com/users
+
+# Path to backend user storage (JSON file)
+USERS_STORAGE_PATH=./data/users.json
