--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.13.4",
     "csv-parse": "^6.1.0",
-    "dotenv": "^16.3.1",
-    "path": "^0.12.7"
+    "dotenv": "^16.6.1",
+    "express": "^5.2.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
+    "@types/express": "^5.0.6",
+    "@types/node": "^20.19.30",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
