--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "types": []
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "node_modules/@types/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
