Provide a user interface to view stored data in table view

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ CSV_OUTPUT_PATH=output/users.csv
 USER_CSV_PATH=./data/users.csv
 PORT=3001
 LOG_LEVEL=info
+
+# --- Frontend (client) ---
+# Place these in client/.env and client/.env.example
+REACT_APP_API_URL=http://localhost:3001
+REACT_APP_WS_URL=http://localhost:3001
