--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ PORT=3001
 
 # Logging level (info, warn, error)
 LOG_LEVEL=info
+
+# --- Frontend (client) ---
+# Place these in client/.env and client/.env.example
+REACT_APP_API_URL=http://localhost:3001
+REACT_APP_WS_URL=http://localhost:3001
