Provide a user interface to view stored data in table view

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ LOG_LEVEL=info
 # Place these in client/.env and client/.env.example
 REACT_APP_API_URL=http://localhost:3001
 REACT_APP_WS_URL=http://localhost:3001
+
+# --- CORS ---
+# Comma-separated list of allowed origins for backend CORS (e.g., http://localhost:3000,http://localhost:3001)
+CORS_ORIGIN=http://localhost:3000,http://localhost:3001
